--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html></html>
 <head>
-  <title>Placeholder</title>
+  <title>K1-9110's Blog</title>
 </head>
 <body>
-  <h1>Placeholder</h1>
+  <h1>Nov 15, 2025</h1>
 </body>
 </html>
