--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
-<html></html>
+<html>
 <head>
-  <title>K1-9110's Blog</title>
+  <title>Why does this exist?</title>
+  <style>
+    body {
+    background-color:grey;
+    color:white;
+    }
+  </style>
 </head>
 <body>
-  <h1>Nov 15, 2025</h1>
+  <h1>Why does this exist?</h1>
+  <p>Well, for many reasons, but the main one is becuase I want to have a simple website without all the modern, flashy details; something that's overall very simple, and straight to the point. Secondly, I just want to have a website to log my thoughts about governments and other such things. Also, free will.</p>
+  <h1>Why use GitHub instead of another source?</h1>
+  <p>Because I'm too poor to purchase my own domain for anything similar to this. I don't want to spend any money.</p>
 </body>
 </html>
