Changed name of website (title)

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Why does this exist?</title>
+  <title>KI-IX/I/MMX</title>
   <style>
     body {
     background-color:grey;
