--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>KI-IX/I/MMX</title>
+  <title>FSB (Free Speech Blog)</title></title>
   <style>
     body {
     background-color:grey;
@@ -17,5 +17,6 @@
   <h1> November 15, 2025</h1>
   <p>The government of the United States is horrible. They say they won't spy on you, but they spy on you in every single possible way that you can imagine, and it's pig-like behavior, it's disgusting in every way possible. It's not just that, they say, and literally say it, that they won't spy on the people of the United States because "it's unconstitutional and wrong to impose such things onto our people, we value their rights." They in fact do not value our rights in any possible way. The only reason that they even listen to anything we say or do in the first place is because of the Constitution of the United States, and if it was up to me, there'd be no filthy, wrong, nasty pig of a government.</p>
   <p>The form of capitalism that we have is terrible for people who are poor and/or with little money. If the USA were communist, things would be very different, but there's no telling if this would be good or not. Because of how the United States of America is with the whole world, America becoming communist would potentially be devastating for quite literally every nation. Many countries rely on the United States of America, and those countries have other countries that rely on them for things as well, and if the US loses what it does best, and falls apart, the whole world will fall apart. However, no one can truly tell what would fully happen if the US were to become communist. All that we know is that it would most likely be devastating to the rest of the world. And before you say to your screen "The US is the only country!," I know, dipstick, but understand that well over 200 countries rely on the United States.</p>
+  <p></p>
 </body>
 </html>
